# aws-local-run

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest_localrun.py
.github/workflows/: publish.yml  reusable-test.yml
localrun/: __init__.py  cli.py  config.py  dashboard.html  dashboard.py  faults.py  gateway.py  plugins.py  state.py  utils.py  watcher.py
localrun/services/: __init__.py  acm.py  apigateway.py  cloudformation.py  cloudwatch_logs.py  cloudwatch_metrics.py  cognito.py  dynamodb.py  ec2.py  eventbridge.py  iam.py  kinesis.py  kms.py  lambda_service.py  opensearch.py  rds.py  route53.py  s3.py  secretsmanager.py  ses.py  sns.py  sqs.py  ssm.py  stepfunctions.py  sts.py
tests/: conftest.py  test_acm.py  test_apigateway.py  test_cfn_executor.py  test_cloudformation.py  test_cloudwatch_logs.py  test_cloudwatch_logs_extended.py  test_cloudwatch_metrics.py  test_cognito.py  test_dashboard.py  test_doctor.py  test_dynamodb.py  test_dynamodb_extended.py  test_dynamodb_gsi.py  test_dynamodb_streams.py  test_dynamodb_ttl.py  test_ec2.py  test_eventbridge.py  test_eventbridge_extended.py  test_faults.py  test_gateway_endpoints.py  test_hot_reload.py  test_iam.py  test_iam_extended.py  test_kinesis.py  test_kms.py  test_lambda.py  test_lambda_logs.py  test_opensearch.py  test_rds.py  test_route53.py  test_s3.py  test_s3_extended.py  test_s3_notifications.py  test_secretsmanager.py  test_secretsmanager_extended.py  test_ses.py  test_sns.py  test_sns_extended.py  test_sqs.py  (+8 more)
